--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "PDA/libs/RPCore"]
 	path = PDA/libs/RPCore
 	url = https://github.com/wildstarnasa/RPCore.git
-[submodule "PDA/libs/GeminiColor"]
-	path = PDA/libs/GeminiColor
+[submodule "GeminiColor"]
+	path = GeminiColor
 	url = https://github.com/wildstarnasa/GeminiColor
