--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "PDA/libs/RPCore"]
 	path = PDA/libs/RPCore
 	url = https://github.com/wildstarnasa/RPCore.git
+[submodule "PDA/GeminiColor"]
+	path = PDA/GeminiColor
+	url = https://github.com/wildstarnasa/GeminiColor
